--- a/index.html
+++ b/index.html
@@ -22,16 +22,6 @@
   --max-width:1120px;
   font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
   color-scheme:dark;
-  
-  .keywords { display:flex; flex-wrap:wrap; gap:10px; }
-.keyword {
-  background: #7dd3fc;
-  color: #04203a;
-  padding: 6px 12px;
-  border-radius: 10px;
-  font-weight: 600;
-}
-
 }
 
 *{box-sizing:border-box}
@@ -65,7 +55,7 @@ h2{margin:0 0 20px 0}
   padding:22px;
 }
 .avatar-img{
-  width:200px;height:200px;
+  width:130px;height:130px;
   border-radius:16px;
   object-fit:cover;
   box-shadow:var(--shadow);
@@ -100,52 +90,46 @@ h2{margin:0 0 20px 0}
 .section{margin-bottom:64px}
 
 /* ================= TIMELINE ================= */
-.timeline {
-  position: relative;
-  padding-left: 0; /* remove old padding */
+.timeline{
+  position:relative;
+  padding-left:36px;
 }
-
-.timeline::before {
-  content: "";
-  position: absolute;
-  left: 32px; /* center bullets relative to cards */
-  top: 0;
-  bottom: 0;
-  width: 2px;
-  background: rgba(255, 255, 255, 0.15);
+.timeline::before{
+  content:"";
+  position:absolute;
+  left:12px;
+  top:0;
+  bottom:0;
+  width:2px;
+  background:rgba(255,255,255,.15);
 }
-
-.timeline-item {
-  position: relative;
-  display: flex;           /* flex for vertical alignment */
-  align-items: center;     /* vertically center card with bullet */
-  margin-bottom: 40px;     /* spacing between items */
-  opacity: 0;
-  transform: translateY(24px);
-  transition: opacity 0.6s ease, transform 0.6s ease;
+.timeline-item{
+  position:relative;
+  margin-bottom:32px;
+  opacity:0;
+  transform:translateY(24px);
+  transition:opacity .6s ease, transform .6s ease;
 }
-
-.timeline-item.visible {
-  opacity: 1;
-  transform: none;
+.timeline-item.visible{
+  opacity:1;
+  transform:none;
 }
-
-.timeline-item::before {
-  content: "";
-  position: absolute;
-  left: 32px;              /* same as line */
-  width: 14px;
-  height: 14px;
-  border-radius: 50%;
-  background: var(--accent);
-  transform: translateX(-50%); /* center dot horizontally */
+.timeline-item::before{
+  content:"";
+  position:absolute;
+  left:-26px;
+  top:10px;
+  width:14px;
+  height:14px;
+  border-radius:50%;
+  background:var(--accent);
 }
-
-.timeline-card {
-  margin-left: 64px;       /* distance from line */
-  flex: 1;
+.timeline-card{
+  background:var(--card);
+  border:1px solid var(--border);
+  border-radius:var(--radius-md);
+  padding:16px;
 }
-
 .timeline-header{
   display:flex;
   align-items:center;
@@ -293,52 +277,16 @@ form textarea{min-height:120px}
   </div>
 </section>
 
-<!-- ABOUT ME -->
-<section class="section">
-  <h2>About Me</h2>
-  <div class="card">
-    <p>
-      I am a Ph.D. student and researcher at the Centro de Química Estrutural (CQE),
-      working in collaboration with the Institut de Minéralogie, de Physique des Matériaux
-      et de Cosmochimie (IMPMC) at the Muséum National d’Histoire Naturelle (MNHN) and
-      with NASA’s Goddard Space Flight Center (NASA-GSFC) on projects in prebiotic
-      chemistry and astrobiology.
-    </p>
-    <p>
-      My research investigates the chemical origins and early evolution of life in the universe,
-      using chemistry to uncover the processes and mechanisms that may have led to life’s emergence.
-      A central theme of my work is mechanochemistry—the study of chemical reactions driven
-      by mechanical forces. I explore how mechanical energy, such as that generated during
-      parent-body formation, asteroid gardening, or meteorite impacts, can promote the
-      synthesis and transformation of organic molecules under conditions relevant to the early
-      Earth and other planetary bodies.
-    </p>
-    <p>
-      By reproducing and characterizing mechanically activated reactions and their products,
-      I investigate alternative pathways for prebiotic chemistry and assess the potential
-      role of mechanical activation in driving chemical complexity in extraterrestrial or
-      extreme environments.
-    </p>
-  </div>
-</section>
-
-
-
 <!-- RESEARCH -->
 <section class="section">
 <h2>Research Interests</h2>
-<div class="card"> <!-- softer blue -->
-  <div class="keywords">
-    <span class="keyword">Mechanochemical Energy</span>
-    <span class="keyword">Prebiotic Synthesis</span>
-    <span class="keyword">Ribonucleoside Reactivity</span>
-    <span class="keyword">Shock-Induced Transformation</span>
-    <span class="keyword">Organic Molecules in Meteorites</span>
-    <span class="keyword">Astrobiology</span>
-    <span class="keyword">Analytical Chemistry</span>
-  </div>
+<div class="card">
+  <p class="meta">
+    Mechanochemical energy and prebiotic synthesis; mechanochemical reactivity of ribonucleosides;
+    shock-induced transformation and degradation of organic molecules in extraterrestrial materials;
+    analytical approaches to organic matter in meteorites.
+  </p>
 </div>
-
 </section>
 
 <!-- EDUCATION -->
@@ -388,147 +336,6 @@ form textarea{min-height:120px}
 </div>
 </section>
 
-<!-- EXPERIENCE -->
-<section class="section">
-<h2>Experience</h2>
-<div class="timeline">
-
-  <div class="timeline-item">
-    <div class="timeline-card">
-      <div class="timeline-header">
-        <img src="images/logos/ist.png" alt="IST">
-        <div>
-          <strong>Invited Assistant (University Teacher)</strong>
-          <div class="meta">Sep 2024 – Oct 2024 · Universidade de Lisboa — Instituto Superior Técnico, Portugal</div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="timeline-item">
-    <div class="timeline-card">
-      <div class="timeline-header">
-        <img src="images/logos/ubi.png" alt="UBI">
-        <div>
-          <strong>Delegate of Industrial Chemistry Students (Pedagogical Council)</strong>
-          <div class="meta">Oct 2019 – Sep 2020 · Universidade da Beira Interior, Portugal</div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="timeline-item">
-    <div class="timeline-card">
-      <div class="timeline-header">
-        <img class="logo-white"	src="images/logos/mnhn.png" alt="MNHN">
-        <div>
-          <strong>Visiting Scientist</strong>
-          <div class="meta">Jan 2025 – Present · Muséum National d’Histoire Naturelle — IMPMC, France</div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="timeline-item">
-    <div class="timeline-card">
-      <div class="timeline-header">
-        <img src="images/logos/nasa.png" alt="NASA">
-        <div>
-          <strong>Visiting Scientist</strong>
-          <div class="meta">Nov 2024 – Dec 2024 · NASA Goddard Space Flight Center, USA</div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="timeline-item">
-    <div class="timeline-card">
-      <div class="timeline-header">
-        <img src="images/logos/aneq.png" alt="ANEQ">
-        <div>
-          <strong>President of the Fiscal Council</strong>
-          <div class="meta">Jun 2021 – May 2022 · National Association of Chemistry Students (ANEQ), Portugal</div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="timeline-item">
-    <div class="timeline-card">
-      <div class="timeline-header">
-        <img src="images/logos/aneq.png" alt="ANEQ">
-        <div>
-          <strong>Vice President</strong>
-          <div class="meta">Jun 2020 – Jun 2021 · National Association of Chemistry Students (ANEQ), Portugal</div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="timeline-item">
-    <div class="timeline-card">
-      <div class="timeline-header">
-        <img src="images/logos/ubi.png" alt="UBI">
-        <div>
-          <strong>Vice-President — UBIQUÍMICA</strong>
-          <div class="meta">Sep 2019 – Dec 2020 · University of Beira Interior, Portugal</div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="timeline-item">
-    <div class="timeline-card">
-      <div class="timeline-header">
-        <img src="images/logos/ubi.png" alt="UBI">
-        <div>
-          <strong>Research Intern</strong>
-          <div class="meta">Jul 2020 – Sep 2020 · Universidade da Beira Interior, Portugal</div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="timeline-item">
-    <div class="timeline-card">
-      <div class="timeline-header">
-        <img src="images/logos/nestle.png" alt="Nestlé">
-        <div>
-          <strong>Factory Worker</strong>
-          <div class="meta">Aug 2019 – Sep 2019 · Nestlé Portugal S.A. (via Randstad)</div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="timeline-item">
-    <div class="timeline-card">
-      <div class="timeline-header">
-        <img src="images/logos/ubi.png" alt="UBI">
-        <div>
-          <strong>Member of the Scientific Committee — UBIQUÍMICA</strong>
-          <div class="meta">Aug 2018 – Aug 2019 · University of Beira Interior, Portugal</div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="timeline-item">
-    <div class="timeline-card">
-      <div class="timeline-header">
-        <img src="images/logos/ramada.png" alt="Ramada Aços">
-        <div>
-          <strong>Professional Internship</strong>
-          <div class="meta">Jun 2014 – Jul 2014 · Ramada Aços, S.A., Portugal</div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-</div>
-</section>
-
-
 <!-- PUBLICATIONS -->
 <section class="section">
 <h2>Publications</h2>
@@ -560,6 +367,13 @@ form textarea{min-height:120px}
       <button class="btn ghost" type="button" onclick="this.form.reset()">Clear</button>
     </div>
   </form>
+</div>
+
+<div class="card">
+  <strong>Profiles</strong>
+  <p class="meta">
+    Full academic record, appointments, and addresses are available via CiênciaVitae and ORCID.
+  </p>
 </div>
 
 </div>
